# SoftwareProjectLabor

./: .gitignore  README.md
Assignment1/: CMakeLists.txt  main.c
Assignment2/: CMakeLists.txt  dynArr.hpp  testDynArr.cpp
Assignment3/: CMakeLists.txt  ast.cpp  ast.h  parser.cpp  parser.h  testParser.cpp  testVM.cpp  tokenizer.cpp  tokenizer.h  utility.h  vm.cpp  vm.h
